<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCDCDC"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_nome" />

        <EditText
            android:id="@+id/txtNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_nome"
            android:maxLength="100"
            android:singleLine="true"
            android:textColor="#000000"
            android:textStyle="bold">

            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_cpf" />

        <EditText
            android:id="@+id/txtCpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_cpf"
            android:maxLength="20"
            android:singleLine="true"
            android:textColor="#000000"
            android:textStyle="bold"></EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_email" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_email"
            android:maxLength="100"
            android:singleLine="true"
            android:textColor="#000000"
            android:textStyle="bold"></EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_telefone" />

        <EditText
            android:id="@+id/txtTelefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_telefone"
            android:maxLength="20"
            android:singleLine="true"
            android:textColor="#000000"
            android:textStyle="bold"></EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_cep" />

        <EditText
            android:id="@+id/txtCep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_cep"
            android:maxLength="20"
            android:singleLine="true"
            android:textColor="#000000"
            android:textStyle="bold"></EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_endereco" />

        <EditText
            android:id="@+id/txtEndereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_endereco"
            android:maxLength="100"
            android:singleLine="true"
            android:textColor="#000000"
            android:textStyle="bold"></EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_numero" />

        <EditText
            android:id="@+id/txtNumero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_numero"
            android:inputType="number"
            android:maxLength="20"
            android:singleLine="true"
            android:textColor="#000000"
            android:textStyle="bold"></EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_bairro" />

        <EditText
            android:id="@+id/txtBairro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_bairro"
            android:inputType="textEmailAddress"
            android:maxLength="100"
            android:singleLine="true"
            android:textColor="#000000"
            android:textStyle="bold"></EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_cidade" />

        <EditText
            android:id="@+id/txtCidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_cidade"
            android:inputType="textEmailAddress"
            android:maxLength="100"
            android:singleLine="true"
            android:textColor="#000000"
            android:textStyle="bold"></EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_uf" />

        <EditText
            android:id="@+id/txtUF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_uf"
            android:inputType="textEmailAddress"
            android:maxLength="2"
            android:singleLine="true"
            android:textColor="#000000"
            android:textStyle="bold"></EditText>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#006400"
            android:onClick="salvar_onClick"
            android:text="@string/btn_salvar"
            android:textColor="#fff"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>